# libftdi

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  Makefile.cvs  Makefile.in  README  README.mingw  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  libftdi.gyp  libftdi.kdevelop  libftdi.kdevprj  libftdi.kdevses  libftdi.lnt  libftdi.pc.in  libftdi.spec  libftdi.spec.in  libftdipp.pc.in  special.m4.in
admin/: acinclude.m4.in
bindings/: CMakeLists.txt  Makefile.am  ftdi.i
bindings/python/: Makefile.am  setup.py.in
doc/: Doxyfile.in  EEPROM-structure  Makefile.am  header.html  release-checklist.txt
examples/: CMakeLists.txt  Makefile.am  baud_test.c  bitbang.c  bitbang2.c  bitbang_cbus.c  bitbang_ft2232.c  eeprom.c  find_all.c  find_all.cpp  find_all_pp.cpp  memorytest.cpp  serial_read.c  serial_test.c  simple.c  sio.c  stream_test.c
examples/python/: complete.py  simple.py
ftdi/: Makefile.am  Makefile.in  ftdi.c  ftdi.h
ftdi/templates/: cpp_template
ftdi_eeprom/: CMakeLists.txt  example.conf  main.c
ftdipp/: CMakeLists.txt  Makefile.am  ftdi.cpp  ftdi.hpp
src/: CMakeLists.txt  Makefile.am  Makefile.in  ftdi.c  ftdi.h  ftdi_i.h  ftdi_stream.c  ftdi_version_i.h
templates/: c  h
test/: CMakeLists.txt  baudrate.cpp
